Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-691

LogFilter not working

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 2.1.6
    • 2.1.7
    • Logging
    • None
    • Solaris 10, but probably others too

    Description

      A log filter like this is not working:
      <LogFilter>
      <Name = "example"/>
      <Condition = "crc MATCH ERR_CLIENT_ABORT"/>
      <Action = "REJECT"/>
      </LogFilter>

      Fix:
      — trafficserver-2.1.6-unstable/proxy/logging/LogFilter.cc 2011-02-28 12:53:23.000000000 -0500
      +++ trafficserver-2.1.6-unstable.hack/proxy/logging/LogFilter.cc 2011-03-04 14:27:16.197395883 -0500
      @@ -452,7 +452,6 @@
      int64_t value;

      m_field->marshal(lad, (char *) &value);

      • value = ntohl(value);

      // we don't use m_operator because we consider all operators to be
      // equivalent to "MATCH" for an integer field

      Attachments

        1. trafficserver.intfilter-fix.patch
          0.4 kB
          Eric Connell

        Activity

          People

            zwoop Leif Hedstrom
            ibrezac Igor Brezac
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: