TS-691 LogFilter not working for "int" types

Review: Leif
Author: Eric Connell

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1079542 13f79535-47bb-0310-9956-ffa450edef68